# trainsight

./: .gitignore  LICENSE  README.md  TESTING.md  gpu_usage_log.csv  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md
examples/: huggingface_example.py
gputrainintel/: cli.py  dashboard.py  legacy_app.py
gputrainintel/analyzers/: bottleneck.py  efficiency.py  thermal.py
gputrainintel/collectors/: gpu.py  processes.py
gputrainintel/config/: default.yaml  loader.py
gputrainintel/integrations/: huggingface.py
gputrainintel/ml/: behavior_model.py  session_store.py
gputrainintel/utils/: smoothing.py  stats.py
tests/: test_amp_monitor.py  test_anomaly.py  test_async_bus.py  test_cost_estimator.py  test_event_bus.py  test_loss_monitor.py  test_oom.py  test_pytorch_hook.py  test_security_hardening.py  test_stats.py
trainsight/: __init__.py  app.py  branding.py  cli.py  dashboard.py
trainsight/analyzers/: regression_anomaly.py  thermal_analyzer.py
trainsight/collectors/: gpu_collector.py
trainsight/config/: default.yaml  loader.py
trainsight/core/: async_bus.py  bus.py  dispatcher.py  event.py
trainsight/cost/: __init__.py  estimator.py
trainsight/dashboard/: renderer.py
trainsight/distributed/: aggregator.py  node.py
trainsight/integrations/: accelerate.py  deepspeed.py  huggingface.py  k8s.py  lightning.py  mlflow.py  pytorch.py  ray_train.py  wandb.py
trainsight/ml/: amp_monitor.py  behavior_engine.py  loss_monitor.py
trainsight/observability/: prometheus.py
trainsight/optimization/: __init__.py  batch_size.py
trainsight/plugins/: loader.py
trainsight/predictors/: oom_predictor.py
trainsight/security/: hardening.py  public_key.pem  release.py  release_manifest.json  sign_release.py
